--- a/home.css
+++ b/home.css
@@ -325,3 +325,9 @@ footer{
   font-size: 40px;
   text-align: center;
 }
+@media only screen and (max-width: 768px) {
+  /* styles for mobile devices */
+  .java{
+    width: 100px ;
+  }
+}
